revert "add build URL to GitHub Releases message"
This reverts commit a908222ad1c4793d8339fb5f39dc967b8a110098.

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ jobs:
         - tar cJf ${ARCHIVE}.tar.xz ./vim
         - zip -r ${ARCHIVE}.zip ./vim
         - cd -
-        - git tag -a "${TRAVIS_TAG:-$(date +%Y%m%dT%H%M%S)}" -m "${TRAVIS_BUILD_WEB_URL}"
+        - git tag ${TRAVIS_TAG:-$(date +%Y%m%dT%H%M%S)}
       deploy:
         provider: releases
         api_key:
@@ -117,7 +117,7 @@ jobs:
         - tar cJf ${ARCHIVE}.tar.xz ./vim
         - zip -r ${ARCHIVE}.zip ./vim
         - cd -
-        - git tag -a "${TRAVIS_TAG:-$(date +%Y%m%dT%H%M%S)}" -m "${TRAVIS_BUILD_WEB_URL}"
+        - git tag ${TRAVIS_TAG:-$(date +%Y%m%dT%H%M%S)}
       deploy:
         provider: releases
         api_key:
