add gettext support

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ jobs:
           packages:
             - autoconf
             - build-essential
+            - gettext
             - git
             - liblua5.1-dev
             - libluajit-5.1-dev
@@ -87,6 +88,7 @@ jobs:
           packages:
             - ccache
             - coreutils
+            - gettext
             - gnu-sed
             - lua@5.1
             - luajit
