--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,7 @@ env:
 jobs:
   include:
     - stage: Test
-      name: build test my Vim in Travis-CI Docker container
-      os: linux
-      dist: xenial
-      sudo: false
-      language: generic
-      script:
-        - printf -- '%s\n' 'see https://hub.docker.com/r/sasaplus1/vim/builds'
-    - name: build test my Vim in Alpine Docker container
+      name: build test my Vim in Alpine Docker container
       os: linux
       dist: xenial
       sudo: false
