--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,8 @@ jobs:
             - libncurses-dev
             - lua5.1
             - luajit
+            - python
+            - python-dev
             - python3
             - python3-dev
           update: true
@@ -109,7 +111,8 @@ jobs:
             - gnu-sed
             - lua@5.1
             - luajit
-            - python3
+            - python@2
+            - python@3
           update: true
       env:
         - ARCHIVE=vim-${TRAVIS_OS_NAME}
