--- a/.travis.yml
+++ b/.travis.yml
@@ -83,7 +83,8 @@ jobs:
         - tar cJf ${ARCHIVE}.tar.xz ./vim
         - zip -r ${ARCHIVE}.zip ./vim
         - cd -
-        - git tag ${TRAVIS_TAG:-$(date +%Y%m%dT%H%M%S)}
+        - export TRAVIS_TAG="$(date +%Y%m%dT%H%M%S)"
+        - git tag "${TRAVIS_TAG}"
       deploy:
         provider: releases
         api_key:
@@ -139,7 +140,8 @@ jobs:
         - tar cJf ${ARCHIVE}.tar.xz ./vim
         - zip -r ${ARCHIVE}.zip ./vim
         - cd -
-        - git tag ${TRAVIS_TAG:-$(date +%Y%m%dT%H%M%S)}
+        - export TRAVIS_TAG="$(date +%Y%m%dT%H%M%S)"
+        - git tag "${TRAVIS_TAG}"
       deploy:
         provider: releases
         api_key:
