--- a/.travis.yml
+++ b/.travis.yml
@@ -83,7 +83,7 @@ jobs:
         - tar cJf ${ARCHIVE}.tar.xz ./vim
         - zip -r ${ARCHIVE}.zip ./vim
         - cd -
-        - export TRAVIS_TAG="$(date +%Y%m%dT%H%M%S)"
+        - export TRAVIS_TAG="${TRAVIS_COMMIT::7}"
         - git tag "${TRAVIS_TAG}"
       deploy:
         provider: releases
@@ -140,7 +140,7 @@ jobs:
         - tar cJf ${ARCHIVE}.tar.xz ./vim
         - zip -r ${ARCHIVE}.zip ./vim
         - cd -
-        - export TRAVIS_TAG="$(date +%Y%m%dT%H%M%S)"
+        - export TRAVIS_TAG="${TRAVIS_COMMIT::7}"
         - git tag "${TRAVIS_TAG}"
       deploy:
         provider: releases
