--- a/.travis.yml
+++ b/.travis.yml
@@ -130,9 +130,9 @@ jobs:
         - curl -L -O https://ftp.gnu.org/pub/gnu/gettext/gettext-0.20.tar.xz
         - tar xf ./gettext-0.20.tar.xz
         - cd ./gettext-*
-        - ./configure --prefix=/tmp/vim/share/gettext --disable-java --disable-c++
-        - make >/dev/null
-        - make install >/dev/null
+        - ./configure --prefix=/tmp/vim/share/gettext --disable-java --disable-c++ >/dev/null 2>&1
+        - make >/dev/null 2>&1
+        - make install >/dev/null 2>&1
         - cd -
       script:
         - true
