--- a/.travis.yml
+++ b/.travis.yml
@@ -62,9 +62,12 @@ jobs:
           update: true
       env:
         - ARCHIVE=vim-${TRAVIS_OS_NAME}
+        - CC='ccache gcc'
+        - CXX='ccache g++'
         - DATADIR=/usr/share
         - GUILT=/opt/guilt
         - PATH=${GUILT}/bin:${PATH}
+        - USE_CCACHE=1
       install:
         - make clone-guilt
         - make -C ./guilt PREFIX=${GUILT} install
@@ -118,11 +121,14 @@ jobs:
           update: true
       env:
         - ARCHIVE=vim-${TRAVIS_OS_NAME}
+        - CC='ccache clang'
+        - CXX='ccache clang++'
         - DATADIR=/usr/share
         - GETTEXT=/tmp/vim/share/gettext
         - GUILT=/tmp/opt/guilt
         - LUA_PREFIX=$(brew --prefix)
         - PATH=${GUILT}/bin:${GETTEXT}/bin:/usr/local/opt/ccache/libexec:${PATH}
+        - USE_CCACHE=1
       install:
         - make clone-guilt
         - gsed -i.bak -r -e 's|\<readlink\>|greadlink|g' ./guilt/guilt
