--- a/.travis.yml
+++ b/.travis.yml
@@ -136,8 +136,8 @@ jobs:
         - tar xf ./gettext-0.20.tar.xz
         - cd ./gettext-*
         - ./configure --prefix=/tmp/vim/share/gettext --disable-java --disable-c++ >/dev/null 2>&1
-        - make >/dev/null 2>&1
-        - make install >/dev/null 2>&1
+        - make -j $(make --no-print-directory -C ../ print-cpu-count) >/dev/null 2>&1
+        - make -j $(make --no-print-directory -C ../ print-cpu-count) install >/dev/null 2>&1
         - rm -rf /tmp/vim/share/gettext/share/doc
         - cd -
       script:
