--- a/.travis.yml
+++ b/.travis.yml
@@ -83,9 +83,8 @@ jobs:
         - sed -i.bak -r -e 's|\<root\>|travis|g' ./vim-kaoriya/build/xubuntu/Makefile
         - make -C ./vim-kaoriya/build/xubuntu VIM_DIR=/tmp/vim/share/vim install
         - cp ./pvim /tmp/vim/bin/pvim
-        - cd /tmp/vim/bin
-        - make -C "${OLDPWD}" create-symlinks
-        - cd -
+        - make create-symlinks
+        - mv pex pview pvimdiff rpview rpvim /tmp/vim/bin/
       before_deploy:
         - cd /tmp
         - tar czf ${ARCHIVE}.tar.gz ./vim
@@ -174,9 +173,8 @@ jobs:
         - gsed -i.bak -r -e 's|\<root\>|travis|g' ./vim-kaoriya/build/freebsd/Makefile
         - make -C ./vim-kaoriya/build/freebsd VIM_DIR=/tmp/vim/share/vim kaoriya-install
         - cp ./pvim /tmp/vim/bin/pvim
-        - cd /tmp/vim/bin
-        - make -C "${OLDPWD}" create-symlinks
-        - cd -
+        - make create-symlinks
+        - mv pex pview pvimdiff rpview rpvim /tmp/vim/bin/
         - >-
           install_name_tool
           -change
