--- a/dockerfiles/alpine/Dockerfile
+++ b/dockerfiles/alpine/Dockerfile
@@ -33,9 +33,8 @@ RUN make -C ./vim-kaoriya/build/xubuntu VIM_DIR="${prefix}/share/vim" install
 
 COPY ./pvim "${prefix}/bin/pvim"
 
-RUN cd "${prefix}/bin" && \
-  make create-symlinks -C "${OLDPWD}" && \
-  cd -
+RUN make create-symlinks && \
+  mv pex pview pvimdiff rpview rpvim "${prefix}/bin/"
 
 RUN printf -- '\n\n%s\n' "PATH=${prefix}/bin:\$PATH" >> ${HOME}/.bashrc && \
   "${prefix}/bin/pvim" --version
