change to use symlink

--- a/.travis.yml
+++ b/.travis.yml
@@ -153,7 +153,7 @@ jobs:
         - cd -
         - gsed -i.bak -r -e 's|\<root\>|travis|g' ./vim-kaoriya/build/freebsd/Makefile
         - make -C ./vim-kaoriya/build/freebsd VIM_DIR=/tmp/vim/share/vim kaoriya-install
-        - install_name_tool -change '/tmp/vim/share/gettext/lib/libintl.7.dylib' '@executable_path/../share/gettext/lib/libintl.7.dylib' /tmp/vim/bin/vim
+        - install_name_tool -change "$(otool -L /tmp/vim/bin/vim | awk '/libintl/ { print $1 }')" '@executable_path/../share/gettext/lib/libintl.dylib' /tmp/vim/bin/vim
       before_deploy:
         - cd /tmp
         - tar czf ${ARCHIVE}.tar.gz ./vim
