--- a/.travis.yml
+++ b/.travis.yml
@@ -92,6 +92,7 @@ jobs:
         - tar czf ${ARCHIVE}.tar.gz ./vim
         - tar cJf ${ARCHIVE}.tar.xz ./vim
         - zip -q -r ${ARCHIVE}.zip ./vim
+        - sha256sum vim-* > ${ARCHIVE}-sha256sum.txt
         - cd -
         - export TRAVIS_TAG="${TRAVIS_COMMIT::7}-${TRAVIS_BUILD_ID}"
         - git tag "${TRAVIS_TAG}"
@@ -191,6 +192,7 @@ jobs:
         - tar czf ${ARCHIVE}.tar.gz ./vim
         - tar cJf ${ARCHIVE}.tar.xz ./vim
         - zip -q -r ${ARCHIVE}.zip ./vim
+        - shasum -a 256 vim-* > ${ARCHIVE}-sha256sum.txt
         - cd -
         - export TRAVIS_TAG="${TRAVIS_COMMIT::7}-${TRAVIS_BUILD_ID}"
         - git tag "${TRAVIS_TAG}"
