--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,57 @@
 version: '3.4'
 
+x-configurations: &configurations >
+  --enable-fail-if-missing
+  --disable-smack
+  --disable-selinux
+  --disable-xsmp
+  --disable-xsmp-interact
+  --enable-luainterp=dynamic
+  --enable-pythoninterp=dynamic
+  --enable-python3interp=dynamic
+  --enable-cscope
+  --disable-netbeans
+  --enable-terminal
+  --enable-multibyte
+  --disable-rightleft
+  --disable-arabic
+  --enable-gui=no
+  --with-compiledby='sasa+1'
+  --with-features=huge
+  --with-luajit
+  --without-x
+  --with-tlib=ncurses
+
 services:
-  test-alpine:
+  alpine:
     build:
+      args:
+        configurations: *configurations
+        image: alpine:3.10
+        setup: >
+          apk --update add --no-cache
+          bash libc6-compat libc-dev
+          autoconf git make
+          gcc ncurses-libs ncurses-dev
+          gettext gettext-dev
+          lua5.1 lua5.1-dev luajit luajit-dev
+          python2 python2-dev
+          python3 python3-dev
       context: .
-      dockerfile: ./dockerfiles/alpine/Dockerfile
-    command:
-      - /opt/vim/bin/vim
-      - --version
     image: sasaplus1/vim-alpine
-  test-ubuntu:
+  ubuntu:
     build:
+      args:
+        configurations: *configurations
+        image: ubuntu:latest
+        setup: >
+          apt update --yes &&
+          apt install --yes
+          autoconf git make
+          build-essential libncurses-dev
+          gettext
+          lua5.1 liblua5.1-dev luajit libluajit-5.1-dev
+          python python-dev
+          python3 python3-dev
       context: .
-      dockerfile: ./dockerfiles/ubuntu/Dockerfile
-    command:
-      - /opt/vim/bin/vim
-      - --version
     image: sasaplus1/vim-ubuntu
